fix responsive collapsed navbar and search

--- a/assets/sass/_form.scss
+++ b/assets/sass/_form.scss
@@ -39,6 +39,10 @@
   input {
     &.form-text {
       margin: 0;
+      display: inline-block;
+    }
+    &.form-submit {
+      margin: 0;
     }
   }
 }
